# sync-mangas

./: alembic.ini  cli.py  init_db.py  main.py  pyproject.toml
alembic/versions/: 18d9478610e0_alterando_tabela_de_manga_e_adicionando_.py  7ccfa26f3252_adicionando_infos_adicionais_a_tabela_.py  904eed554e59_alterar_numero_para_float.py  afa3f290e645_criar_coluna_de_baixado_no_capitulo.py
app/: crud.py  db.py  models.py
app/core/: base_provedor.py  provider_template.py
app/providers/: mangabr.py  mangaonline.py
app/ui/: main.py
