[project]
name = "sync-mangas"
version = "0.1.0"
description = "Gerenciador de mangas"
authors = [
    {name = "rennyson10oa",email = "rennysonlimadiasrennyson@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "rich (>=14.1.0,<15.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "textual (>=6.1.0,<7.0.0)",
    "typer (>=0.19.2,<0.20.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "httpx (>=0.28.1,<0.29.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
